Correct the first request

--- a/index.html
+++ b/index.html
@@ -1,22 +1,69 @@
 <html>
 
 <head>
+    <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
 </head>
 
 <body>
-    <div style="text-align: center; padding-top: 10%;">
-        <input id="field" type="text" size="40">
-        <a id="tag" style="padding-left: 16px;">Delete Text</a>
-    </div>
+    <form>
+        <select id="colorSelector">'
+            <option value="Выберите цвет" hidden>Выберите цвет</option>
+            <option value="red">Красный</option>
+            <option value="green">Зеленый</option>
+            <option value="orange">Оранжевый</option>
+        </select>
+        <select id="sizeSelector">
+            <option value="Выберите размер" hidden>Выберите размер</option>
+            <option value="400x600">400x600</option>
+            <option value="800x600">800x600</option>
+            <option value="1280x960">1280x960</option>
+        </select>
+        <input pattern="[a-zA-Z]{1,8}\s?\d?" id="text" required>
+        <input id="clickButton" type="submit" value="Дозаполнить форму" onclick="RecieveAnswer(event)" />
+    </form>
 </body>
 
 <script>
-    let tag = document.getElementById("tag");
-    let field = document.getElementById("field");
-    tag.ondblclick = function() {
-        let message = field.value.substring(0, field.value.lastIndexOf(" "));
-        field.value = message;
+    let state = {
+        name: 'default',
+        color: 'default',
+        size: 'default',
+        formIsFull: false,
     };
+    clickButton.addEventListener('keypress', RecieveAnswer);
+
+    function RecieveAnswer(event) {
+        event.preventDefault();
+        let reqBody = {
+            colorSelector: colorSelector.value,
+            text: text.value,
+            sizeSelector: sizeSelector.value,
+        }
+        fetch('http://localhost:8888/getPicture', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(reqBody)
+        })
+            .then(response => response.json())
+            .then(result => {
+                console.log(result);
+                if (result.name === 'not found') {
+                    text.value = result.name;
+                    sizeSelector.value = 'Выберите размер';
+                    colorSelector.value = 'Выберите цвет';
+                    return;
+                }
+                text.value = result.name.join(' ');
+                if (result.color === '#FF0000') { colorSelector.value = 'red' }
+                if (result.color === '#00FF00') { colorSelector.value = 'green' }
+                if (result.color === '#FF8000') { colorSelector.value = 'orange' }
+                if (result.size.width === '400') { sizeSelector.value = '400x600' }
+                if (result.size.width === '800') { sizeSelector.value = '800x600' }
+                if (result.size.width === '1280') { sizeSelector.value = '1280x960' }
+            });
+    }
 </script>
 
 </html>
